REGRESSION(298556@main): [GTK] Rendering broken in Boxes with 3D passthrough disabled https://bugs.webkit.org/show_bug.cgi?id=298776

Reviewed by Nikolas Zimmermann.

Do not fallback to DRM API to get main DRM device information when EGL
extension is present but reports nullptr device, which is the case when
software rasterization is used.

Canonical link: https://commits.webkit.org/300021@main